solved all problems.
Needs:
	refactoring
	javadoc